--- a/app/views/pages/tank_vehicle_endorsement.html.erb
+++ b/app/views/pages/tank_vehicle_endorsement.html.erb
@@ -1,1 +1,56 @@
-<h1>Tank Vehicle Endorsement</h1>
+<% content_for :head do %>
+  <title>Tank Vehicle Endorsement Study Guide & Practice Tests</title>
+  <meta name="description" content="Tank Vehicle Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
+<% end %>
+
+<div class="row text-center">
+  <h1>Tank Vehicle Endorsement Study Guide and Practice Tests</h1>
+</div>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
+
+<div class="row pricing-row">
+  <div class="col-sm-12">
+		<div id="pricing-table" class="pricing-table">
+		  <ul>
+		    <li class="heading">Study Guide</li>
+		    <li><strong>Learn</strong> About the Test</li>
+		    <li><strong>Powerful</strong> Strategies</li>
+		    <li>Test Day Tips</li>
+		    <li>PDF, ePub, mobi formats</li>
+		    <li class="price"><span class="dollar">$</span>11</li>
+		    <li><a class="btn btn-primary btn-lg" href="#">Buy Now</a></li>
+		  </ul>
+
+		  <ul class="feature">
+		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+		    <li><strong>Complete</strong> Practice Test</li>
+		    <li><strong>All</strong> Study Guide Formats</li>
+		    <li><strong>Full</strong> Access</li>
+		    <li><strong>Master</strong> the Test</li>
+		    <li class="price"><span class="dollar">$</span>17</li>
+		    <li><a class="btn btn-danger btn-lg" href="#">Buy Now</a></li>
+		  </ul>
+
+		  <ul>
+		    <li class="heading">Practice Test</li>
+		    <li><strong>200</strong> Questions</li>
+		    <li>Interactive</li>
+		    <li><strong>Automatic</strong> Scoring</li>
+		    <li><strong>Unlimited</strong> Attempts</li>
+		    <li class="price"><span class="dollar">$</span>9</li>
+		    <li><a class="btn btn-primary btn-lg" href="#">Buy Now</a></li>
+		  </ul>
+		</div>
+	</div>
+</div>
+
+<p>
+
+<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+
+<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+
+<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
+
+<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
