Another Paypal test

--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -39,7 +39,7 @@
 		    <li><strong>Automatic</strong> Scoring</li>
 		    <li><strong>Unlimited</strong> Attempts</li>
 		    <li class="price"><span class="dollar">$</span>37</li>
-		    <li><%= link_to "Buy Now", "https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SJVLWFCWT8HFN", class: "btn btn-primary btn-lg", method: :post %></li>
+		    <li><%= link_to "Buy Now", "https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SJVLWFCWT8HFN", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 		</div>
 	</div>
