--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -45,7 +45,11 @@
 	</div>
 </div>
 
-<p>
+<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick">
+  <input type="hidden" name="hosted_button_id" value="SJVLWFCWT8HFN">
+  <input type="submit" class="btn btn-success btn-lg" value="Order Now">
+</form>
 
 <p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
 
