Paypal once again

--- a/app/views/pages/success_itca.html.erb
+++ b/app/views/pages/success_itca.html.erb
@@ -1,3 +1,9 @@
+<% if request.env["HTTP_REFERER"] %>
+  <%= request.env["HTTP_REFERER"] %>
+<% else %>
+Nothing.
+<% end %>
+
 <% if request.env["HTTP_REFERER"] && URI.parse(request.env["HTTP_REFERER"]).host == "paypal.com" %>
 	<%= render partial: "thanks" %>
 
