--- a/app/views/pages/success_itca.html.erb
+++ b/app/views/pages/success_itca.html.erb
@@ -1,10 +1,12 @@
+<p>
 <% if request.env["HTTP_REFERER"] %>
-  <%= request.env["HTTP_REFERER"] %>
+  <%= request.env["HTTP_REFERER"].host %>
 <% else %>
 Nothing.
 <% end %>
+</p>
 
-<% if request.env["HTTP_REFERER"] && URI.parse(request.env["HTTP_REFERER"]).host == "paypal.com" %>
+<% if request.env["HTTP_REFERER"] && URI.parse(request.env["HTTP_REFERER"]).host == "sandbox.paypal.com" %>
 	<%= render partial: "thanks" %>
 
 	<div class="col-md-8 col-md-offset-1">
