Really last one

--- a/app/views/pages/success_itca.html.erb
+++ b/app/views/pages/success_itca.html.erb
@@ -1,6 +1,6 @@
 <p>
 <% if request.env["HTTP_REFERER"] %>
-  <%= request.env["HTTP_REFERER"].host %>
+  <%= URI.parse(request.env["HTTP_REFERER"]).host %>
 <% else %>
 Nothing.
 <% end %>
