--- a/app/views/pages/success.html.erb
+++ b/app/views/pages/success.html.erb
@@ -1,5 +1,13 @@
-<%= render partial: "thanks" %>
+<% if request.env["HTTP_REFERER"] && URI.parse(request.env["HTTP_REFERER"]).host == "www.sandbox.paypal.com" %>
+	<%= render partial: "thanks" %>
 
-<div class="col-md-8 col-md-offset-1">
-	<%= render partial: "devise/registrations/form", locals: { package: "regsies" } %>
-</div>
+	<div class="col-md-8 col-md-offset-1">
+	  <% if params[:p] %>
+		  <%= render partial: "devise/registrations/form", locals: { package: params[:p] } %>
+		<% else %>
+		  <%= render partial: "devise/registrations/form", locals: { package: "none" } %>
+		<% end %>
+	</div>
+<% else %>
+  How did you get here?
+<% end %>
