--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,7 @@ body {
   margin-bottom: 200px;
   overflow-x: hidden;
   min-height: 300px;
+  padding-bottom: 40px;
   @media (max-width: 767px) and (min-width: 357px) {
     margin-bottom: 225px;
   }  
