Add Paypal buttons to test pages

--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -19,7 +19,7 @@
 		    <li>Test Day Tips</li>
 		    <li>PDF, ePub, mobi formats</li>
 		    <li class="price"><span class="dollar">$</span>24</li>
-		    <li><a class="btn btn-primary btn-lg" href="#">Buy Now</a></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SWYAGQ6PPCPQ6", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 
 		  <ul class="feature">
@@ -29,7 +29,7 @@
 		    <li><strong>Full</strong> Access</li>
 		    <li><strong>Master</strong> the Test</li>
 		    <li class="price"><span class="dollar">$</span>47</li>
-		    <li><a class="btn btn-danger btn-lg" href="#">Buy Now</a></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D99NGNCK8UB6", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 
 		  <ul>
@@ -39,7 +39,7 @@
 		    <li><strong>Automatic</strong> Scoring</li>
 		    <li><strong>Unlimited</strong> Attempts</li>
 		    <li class="price"><span class="dollar">$</span>37</li>
-		    <li><%= link_to "Buy Now", "https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SJVLWFCWT8HFN", class: "btn btn-primary btn-lg" %></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZTWRYCP37U2H8", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 		</div>
 	</div>
