--- a/app/views/pages/school_bus_endorsement.html.erb
+++ b/app/views/pages/school_bus_endorsement.html.erb
@@ -19,7 +19,7 @@
 		    <li>Test Day Tips</li>
 		    <li>PDF, ePub, mobi formats</li>
 		    <li class="price"><span class="dollar">$</span>11</li>
-		    <li><a class="btn btn-primary btn-lg" href="#">Buy Now</a></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=H53ZES7HFP2KQ", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 
 		  <ul class="feature">
@@ -29,7 +29,7 @@
 		    <li><strong>Full</strong> Access</li>
 		    <li><strong>Master</strong> the Test</li>
 		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><a class="btn btn-danger btn-lg" href="#">Buy Now</a></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5RLNSFW5KNVQU", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 
 		  <ul>
@@ -39,7 +39,7 @@
 		    <li><strong>Automatic</strong> Scoring</li>
 		    <li><strong>Unlimited</strong> Attempts</li>
 		    <li class="price"><span class="dollar">$</span>9</li>
-		    <li><a class="btn btn-primary btn-lg" href="#">Buy Now</a></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X2K2N35W4WH6W", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 		</div>
 	</div>
