Add test code to tests and fixed broken test navigation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -139,6 +139,10 @@ a.btn.btn-danger.navbar-btn.order {
   }
 }
 
+a#download.dropdown-toggle:hover {
+  color: #FFF;
+}
+
 .highlighted {
   color: #19C4A2;
 	font-weight: 900;
