--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -15,8 +15,12 @@
 
     <div class="form-group">
       <%= f.label :name, "Test Name", class: "col-md-2 control-label" %>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <%= f.text_field :name, class: "form-control" %>
+      </div>
+      <%= f.label :code, "Test code", class: "col-md-2 control-label" %>
+      <div class="col-md-2">
+        <%= f.text_field :code, class: "form-control" %>
       </div>
     </div>
     
