--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -14,8 +14,9 @@
 
 <% @tests.includes(:attempts).each do |test| %>
   <h3><%= test.name %></h3>
-  <p><% if active_attempts(current_user, test).any? %>
-    <%= link_to "Resume this test", attempt_path(last_attempt(current_user, test).id), class: "btn btn-success" %>
+  <p><% if active_attempts(current_user, test).any? && last_attempt_in_progress(current_user, test) %>
+    <%= link_to "Resume this test", attempt_path(last_attempt(current_user, test).id), class: "btn btn-success" %> or 
+    <%= link_to 'Start over', test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
   <% else %>
     <%= link_to raw('Start the test <i class="fa fa-angle-double-right"></i>'), test_question_path(test.id, test.questions.first.id), class: "clear-score btn btn-info" %>
   <% end %></p>
